 * Correct the OSC config option name for output format in the documentation
 * Use top_builddir in more places in the build
 * Use libusb_set_option where available
 * Fix the udev rules
 * Downstream Debian fixes
 * Fix an incorrect response if we have the sensor PIDs but no sensors
 * Stop trying to build opendmx kernel plugin on Windows

 Internal:
 * Various minor log formatting tidying up

07/01/2018 ola-0.10.6
 Bugs:
 * Renamed fempto(sic) to femto in the RDM code (C++ and Python)
 * Renamed terra(sic) to tera in the RDM code (C++ and Python)
 * Fixes for RDM test server forward compatibility with later JQuery versions
 * Fix a man page typo
 * Fix a longstanding copy-paste typo in the Python client's RegisterUniverse
   function
 * Increment the Transaction Number for each Art-Net RDM packet #189
 * Fix lots of minor documentation spelling errors found by spellintian and
   codespell
 * Renamed protocol convertor(sic) to protocol converter in the RDM code (C++
   and Python)

17/07/2017 ola-0.10.5
 Features:
 * Make some error logs more verbose

 Bugs:
 * C++11 compatibility fix (for cppunit 1.14.0) #1244
 * Always print frames in ola_rdm_get/set, even if we get an error
 * Ensure man files ship in the correct packages #1276
 * Check protobuf is old enough, until we fix #1192

21/05/2017 ola-0.10.4
 Features:
 * Add more help regarding the ArtNet use_limited_broadcast option

 Bugs:
 * Ensure Pathport node actually uses configured IP #1166
 * Improve some debugging around flag parsing #1198
 * Disable warnings for readdir_r deprecation until we can rewrite our code to
   stop using it. Related to #1055
 * Stop replacing -I with -isystem and correctly work around the resultant
   errors #1125
 * Exit, rather than continuing, if ola_throughput failed to send DMX
 * Implement OLA_FALLTHROUGH macro for adding fallthrough attributes to 
   switchcases in gcc versions higher than 7 #1193 Debian #853583
 * Fix Protobuf 2.6 not building on the latest OS X